# ChangeLog for media-video/x264-svn-encoder
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/x264-svn-encoder/ChangeLog,v 1.9 2007/09/24 06:08:44 aballier Exp $

  24 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  x264-svn-encoder-20070923.ebuild:
  fix usage of debug useflag, bug #193570

*x264-svn-encoder-20070923 (23 Sep 2007)

  23 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  +files/x264-svn-encoder-20070923-nolib.patch,
  +files/x264-svn-encoder-20070923-nostrip.patch,
  +x264-svn-encoder-20070923.ebuild:
  version bump now that yasm issues on x86 have been fixed, bug #180666, block
  older version of yasm because of this

*x264-svn-encoder-20070325 (25 Mar 2007)

  25 Mar 2007; Alexis Ballier <aballier@gentoo.org>
  +files/x264-svn-encoder-20070325-nolib.patch,
  +files/x264-svn-encoder-20070325-nostrip.patch,
  +x264-svn-encoder-20070325.ebuild:
  New snapshot

  06 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  x264-svn-encoder-20061014.ebuild:
  amd64 stable, bug 157814

  04 Jan 2007; Christian Faulhammer <opfer@gentoo.org>
  x264-svn-encoder-20061014.ebuild:
  stable x86, bug #157814

  23 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  x264-svn-encoder-20061014.ebuild:
  Stable on ppc wrt bug #157814.

  21 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  x264-svn-encoder-20061014.ebuild:
  Stable on sparc wrt #157814

  21 Dec 2006; Markus Rothe <corsair@gentoo.org>
  x264-svn-encoder-20061014.ebuild:
  Stable on ppc64; bug #157814

*x264-svn-encoder-20061014 (07 Dec 2006)

  07 Dec 2006; Alexis Ballier <aballier@gentoo.org>
  +files/x264-svn-encoder-20061014-nolib.patch,
  +files/x264-svn-encoder-20061014-nostrip.patch, +metadata.xml,
  +x264-svn-encoder-20061014.ebuild:
  Initial import
