@@ -17,17 +17,17 @@ AUX x264-svn-encoder-20070325-nostrip.patch 433 RMD160 81c3893b1a02839da38f34484
 MD5 287a591572985d408a30f928f7b65f2a files/x264-svn-encoder-20070325-nostrip.patch 433
 RMD160 81c3893b1a02839da38f34484c794996855fab5e files/x264-svn-encoder-20070325-nostrip.patch 433
 SHA256 1210914cc52de908b840775ab8e4a107d95aeced690c2f115320d31e587a2ffa files/x264-svn-encoder-20070325-nostrip.patch 433
-AUX x264-svn-encoder-20070923-nolib.patch 2382 RMD160 0a2c7d9c5dcd0e03aef048a7752f6cdf5e1e2d11 SHA1 f2bae8f1a8bbb9d19152e69d81d8bafce03e5f0e SHA256 4ea2cde455663ddec69a4bbc63a00331ed60e92b58b0596e2329ae6f64b3e8aa
-MD5 95859dfc9b9cc4e24b8525465f0dd18f files/x264-svn-encoder-20070923-nolib.patch 2382
-RMD160 0a2c7d9c5dcd0e03aef048a7752f6cdf5e1e2d11 files/x264-svn-encoder-20070923-nolib.patch 2382
-SHA256 4ea2cde455663ddec69a4bbc63a00331ed60e92b58b0596e2329ae6f64b3e8aa files/x264-svn-encoder-20070923-nolib.patch 2382
-AUX x264-svn-encoder-20070923-nostrip.patch 433 RMD160 81c3893b1a02839da38f34484c794996855fab5e SHA1 42c0807d6f2f13f848409d9545994c8b66338c8c SHA256 1210914cc52de908b840775ab8e4a107d95aeced690c2f115320d31e587a2ffa
-MD5 287a591572985d408a30f928f7b65f2a files/x264-svn-encoder-20070923-nostrip.patch 433
-RMD160 81c3893b1a02839da38f34484c794996855fab5e files/x264-svn-encoder-20070923-nostrip.patch 433
-SHA256 1210914cc52de908b840775ab8e4a107d95aeced690c2f115320d31e587a2ffa files/x264-svn-encoder-20070923-nostrip.patch 433
+AUX x264-svn-encoder-nolib.patch 2382 RMD160 0a2c7d9c5dcd0e03aef048a7752f6cdf5e1e2d11 SHA1 f2bae8f1a8bbb9d19152e69d81d8bafce03e5f0e SHA256 4ea2cde455663ddec69a4bbc63a00331ed60e92b58b0596e2329ae6f64b3e8aa
+MD5 95859dfc9b9cc4e24b8525465f0dd18f files/x264-svn-encoder-nolib.patch 2382
+RMD160 0a2c7d9c5dcd0e03aef048a7752f6cdf5e1e2d11 files/x264-svn-encoder-nolib.patch 2382
+SHA256 4ea2cde455663ddec69a4bbc63a00331ed60e92b58b0596e2329ae6f64b3e8aa files/x264-svn-encoder-nolib.patch 2382
+AUX x264-svn-encoder-nostrip.patch 433 RMD160 81c3893b1a02839da38f34484c794996855fab5e SHA1 42c0807d6f2f13f848409d9545994c8b66338c8c SHA256 1210914cc52de908b840775ab8e4a107d95aeced690c2f115320d31e587a2ffa
+MD5 287a591572985d408a30f928f7b65f2a files/x264-svn-encoder-nostrip.patch 433
+RMD160 81c3893b1a02839da38f34484c794996855fab5e files/x264-svn-encoder-nostrip.patch 433
+SHA256 1210914cc52de908b840775ab8e4a107d95aeced690c2f115320d31e587a2ffa files/x264-svn-encoder-nostrip.patch 433
 DIST x264-svn-20061014.tar.bz2 288203 RMD160 c6f7275a3691c18821d1562a3b7db8e3b01ac886 SHA1 32e68b019f0871eb85cb29084008e54175a49de0 SHA256 4a26b883d7f9c4f3cff56a3034e9f7617d2b1cd4f8d1846b886130fffdbf6bbc
 DIST x264-svn-20070325.tar.bz2 492487 RMD160 38d9c2aa39567de39a950c45cd032ff3599b0d5b SHA1 b3ac04e09af1f936fb67b13c20c8f82b4b9c448d SHA256 b2398f83b5949032e9a42bb8b2f70d00a18bdbff2f6b0bb6897d65384c42ca28
-DIST x264-svn-20070923.tar.bz2 322704 RMD160 5a6c643521b98fe10ebb6c63168d0a9b7a9dc548 SHA1 5776cf5495c9c60cf2dda4188c5a9a13413ef614 SHA256 39d8a8b72ede15efda9b3ad9f9583dfcdf8c750587f62d5caf5e4e0462acfa50
+DIST x264-svn-20070924.tar.bz2 323590 RMD160 f2f4460e594d9898edfb480ee7bc20a136d69b87 SHA1 4295457ecd61e2398ed34db76fb48ca19e35059b SHA256 2d5b119175a6876f509570b7f077ac65666b743d7c851a443f39ec39449940a4
 EBUILD x264-svn-encoder-20061014.ebuild 1472 RMD160 ecd31d1a086087d317f41139e807efa61e3a4708 SHA1 54f1dded73219d6891b2f7921281db54e8a68a34 SHA256 16dc4d1cb5f3457a0c8ef1ee80be08ea86b02819295f55539a4f6cbcfcbad089
 MD5 e3d80d6cbe619ad7ca252aebb1d3284b x264-svn-encoder-20061014.ebuild 1472
 RMD160 ecd31d1a086087d317f41139e807efa61e3a4708 x264-svn-encoder-20061014.ebuild 1472
@@ -36,14 +36,14 @@ EBUILD x264-svn-encoder-20070325.ebuild 1445 RMD160 235ff227b45e897bc9e8cf693d61
 MD5 ad41277e27fbde706847e64f94fcda99 x264-svn-encoder-20070325.ebuild 1445
 RMD160 235ff227b45e897bc9e8cf693d618cb6384a41f0 x264-svn-encoder-20070325.ebuild 1445
 SHA256 e4b8cb6cc53317c98301f12ee432815a266363d3b732be844afb116a065e9e51 x264-svn-encoder-20070325.ebuild 1445
-EBUILD x264-svn-encoder-20070923.ebuild 1735 RMD160 e2602a009ef540cf469715aa4925c047def22f43 SHA1 2900019cee2e4c79eae0d5b1d2840fe3e7f98bf5 SHA256 d69a329e8118e3a84725c056fb6bd47dda51cb4c8b055ee6e2279f6feff46f9c
-MD5 a37c24570ec9f74fd1d0f404d5b9e47d x264-svn-encoder-20070923.ebuild 1735
-RMD160 e2602a009ef540cf469715aa4925c047def22f43 x264-svn-encoder-20070923.ebuild 1735
-SHA256 d69a329e8118e3a84725c056fb6bd47dda51cb4c8b055ee6e2279f6feff46f9c x264-svn-encoder-20070923.ebuild 1735
-MISC ChangeLog 1819 RMD160 733c07f55247a018f51172a098a12f77fb88cbd9 SHA1 507c58ccded06c39dba8e8b244175f7b1effbc7f SHA256 63cc5407ce217d0a3727a543bf2a4867cdce1321baf1e9d353719a3aef1ef49f
-MD5 1f681c1714d3c47ed3990a114e3e9748 ChangeLog 1819
-RMD160 733c07f55247a018f51172a098a12f77fb88cbd9 ChangeLog 1819
-SHA256 63cc5407ce217d0a3727a543bf2a4867cdce1321baf1e9d353719a3aef1ef49f ChangeLog 1819
+EBUILD x264-svn-encoder-20070924.ebuild 1737 RMD160 bf6387dda273fe5ea74381fc89e81552c6852af1 SHA1 7dddc1ae5425e00e6c882ed299e9af1745cee253 SHA256 af5a9a70b27843a59d70c29c9b528aa9680fd31e80abbbd15955ea94ed2a92cd
+MD5 4f9bc1c650ebbbe4fcbb47986d21e177 x264-svn-encoder-20070924.ebuild 1737
+RMD160 bf6387dda273fe5ea74381fc89e81552c6852af1 x264-svn-encoder-20070924.ebuild 1737
+SHA256 af5a9a70b27843a59d70c29c9b528aa9680fd31e80abbbd15955ea94ed2a92cd x264-svn-encoder-20070924.ebuild 1737
+MISC ChangeLog 2193 RMD160 a7810f63ba09c581b02540b6c8fbd21d336d85c8 SHA1 c585e83edefab35ba2be37ce9002019359bc7a4f SHA256 42176f2723575e1a71fe5c96a465525d5734842abd61dee63ebb364f996f3a57
+MD5 72f33bb7d7c700aaf3a53f68d70c3314 ChangeLog 2193
+RMD160 a7810f63ba09c581b02540b6c8fbd21d336d85c8 ChangeLog 2193
+SHA256 42176f2723575e1a71fe5c96a465525d5734842abd61dee63ebb364f996f3a57 ChangeLog 2193
 MISC metadata.xml 472 RMD160 dba36bb23c9e806f44b0b72b4de9a0eb442c2cef SHA1 ec10e57e2f202a4fe5b05700dfffff5cc50578c0 SHA256 997d208d55bba8def7d5409568a9df5f8b26bc80a32cfc9ffccc97646f0a7129
 MD5 74a760bb9462e29f2304b46694adb01d metadata.xml 472
 RMD160 dba36bb23c9e806f44b0b72b4de9a0eb442c2cef metadata.xml 472
@@ -54,13 +54,13 @@ SHA256 4eadce87a1d26efb89411dbe5e48facd55b86041f42e243e12d9b83312d04a35 files/di
 MD5 b62afa9b61a3b75309e3449e1e66e7f4 files/digest-x264-svn-encoder-20070325 256
 RMD160 5ebd356c5f0a770fbbe59125ae72fec7816e3a94 files/digest-x264-svn-encoder-20070325 256
 SHA256 437d0cf75bd5a0b8447e676f73cd94bc4ffa22fbc0a2abe77cdbf9278f959241 files/digest-x264-svn-encoder-20070325 256
-MD5 884507177accd59fcffc342e3b46ff32 files/digest-x264-svn-encoder-20070923 256
-RMD160 ae9458e52cf9340bb710bd3ba2bd08094841bc49 files/digest-x264-svn-encoder-20070923 256
-SHA256 e7d51cf2269c4d0fbf719901a286890bacfe4bf02b48013bfa6a98ecec8dcd4c files/digest-x264-svn-encoder-20070923 256
+MD5 aeb80cf16266d3fe6429192fe8e73f30 files/digest-x264-svn-encoder-20070924 256
+RMD160 76c58d3387482962230a7bd30353bf56bb0e06ef files/digest-x264-svn-encoder-20070924 256
+SHA256 036ebed0140447d6e3398ca2faed5ee6f7faaa2fd79a9e521c0b431a0b018778 files/digest-x264-svn-encoder-20070924 256
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFG91RyvFcC4BYPU0oRAsQgAKCcNTEFRkQutgINQDJ+H4XwaVFgeACglIJ5
-nv7WBLdhUkUIJoGeKrqGLoY=
-=Cfbx
+iD8DBQFG9/ehvFcC4BYPU0oRAt+jAJ92Q7BSWUZdRfAbBz4NAuoS8Q5mtACghSgW
+/82FNO8AB/N9GovDa5iBF48=
+=C2aX
 -----END PGP SIGNATURE-----
