@@ -1,3 +1,0 @@
-MD5 3f6e81f8fd33c4bd9ee558ee3ec1f920 x264-svn-20070923.tar.bz2 322704
-RMD160 5a6c643521b98fe10ebb6c63168d0a9b7a9dc548 x264-svn-20070923.tar.bz2 322704
-SHA256 39d8a8b72ede15efda9b3ad9f9583dfcdf8c750587f62d5caf5e4e0462acfa50 x264-svn-20070923.tar.bz2 322704
