@@ -1,0 +1,3 @@
+MD5 ec550eedf6fd012d5b486b5cfb38259d x264-svn-20070924.tar.bz2 323590
+RMD160 f2f4460e594d9898edfb480ee7bc20a136d69b87 x264-svn-20070924.tar.bz2 323590
+SHA256 2d5b119175a6876f509570b7f077ac65666b743d7c851a443f39ec39449940a4 x264-svn-20070924.tar.bz2 323590
